# socigy-soc

./: .gitignore  LICENSE  LICENSE.txt  README.md
client/web/: next.config.ts  package-lock.json  package.json  tsconfig.json
db-scripts/: auth.sql  content.sql  content_data.sql  plugins.sql  user.sql
deployment/: consul-values.yml  dashboard-values.yml  grafana-values.yml  ingress-values.yml  init.sh  loki-values.yml  patroni-values.yml  prometheus-values.yml  vault-values.yml
deployment/kube/: frontend.yml  nginx.yml  security.yml
deployment/vault/: init.sh  unseal.sh
plugins/: .gitignore  README.md  dev-env-setup.sh  package-lock.json  package.json  tsconfig.json
plugins/example-plugin/: Cargo.toml  plugin.json
plugins/example-plugin/src/: lib.rs
plugins/example-plugin/src/ui/: window.rs
plugins/example-plugin/src/ui/components/: counter.rs  mod.rs
plugins/profile-enhancement/: Cargo.toml  plugin.json
plugins/scripts/: api.js  api.ts  run.js  run.ts  tests.js  tests.ts
plugins/socigy/: Cargo.toml
plugins/socigy/macros/: Cargo.toml
plugins/socigy/macros/src/: lib.rs  parsing.md
plugins/socigy/macros/src/ui/: derive.rs  errors.rs  input.rs  mod.rs  output.rs  types.rs
plugins/socigy/src/: callbacks.rs  constants.rs  device.rs  initialization.rs  internet.rs  lib.rs  logging.rs  macros.rs  modals.rs  permissions.rs  storage.rs  user_interface.rs
plugins/socigy/src/ui/: bindings.rs  components.rs  elements.rs  mod.rs
plugins/socigy/src/ui/events/: bindings.rs  elements.rs  mod.rs  native.rs
plugins/socigy/src/ui/renderer/: bindings.rs  diffs.rs  mod.rs
plugins/socigy/src/utils/: crypto.rs  js.rs  json.rs  mod.rs
server/: Socigy.sln
(+711 files in other folders)
