[package]
name = "example-plugin"
version = "0.1.0"
edition = "2021"
description = " "
repository = ""

[dependencies]
socigy = { path = "../socigy", features = ["ui", "ui-macros"] }
wasm-bindgen = "0.2"

serde = "1.0.217"
serde_json = "1.0.138"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = "s"          # Optimize for size (use "z" for even smaller binaries)
lto = true               # Enable Link Time Optimization
codegen-units = 1        # Helps with optimizations
panic = "abort"          # Removes panic handling code
strip = true             # Removes debug symbols
debug = false
debug-assertions = false
overflow-checks = false
