[workspace]
members = [".", "macros"]

[package]
name = "socigy"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
socigy-macros = { path = "./macros" }
js-sys = "0.3.76"

wasm-bindgen = "0.2"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6.5"

uuid = { version = "1.13.1", features = ["serde"] }

[profile.release]
lto = true
opt-level = 's'

[features]
ui-events = []
ui = ["ui-events"]
ui-macros = ["ui"]

clipboard = ["ui"]
