[lib]
proc-macro = true

[package]
name = "socigy-macros"
version = "0.1.0"
edition = "2021"


[dependencies]
quote = "1.0"
serde = "^1.0.217"
serde_json = "^1.0.138"
proc-macro2 = "^1.0.93"
proc-macro-error = { version = "^1", default-features = false }
proc-macro-crate = "3.2.0"
uuid = "^1.12.1"
regex = "^1.11.1"
syn = "^2.0.97"
